--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/bgartdu/burger/issues"
   },
-  "homepage": "https://github.com/bgartdu/burger#readme"
+  "homepage": "https://github.com/bgartdu/burger#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "mysql2": "^2.1.0"
+  }
 }
